--- a/src/index.css
+++ b/src/index.css
@@ -6,11 +6,15 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
+html, body {
   margin: 0;
+  height: 100vh;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+body {
+  background-color: #F4F2F6
+}
+
+#root {
+  height: 100%;
 }
