--- a/src/Component/SideBySide/style.css
+++ b/src/Component/SideBySide/style.css
@@ -1,12 +1,15 @@
 div.SideBySide {
 	display: flex;
 	flex-direction: row;
-	flex-basis: 100%;
 }
 
 div.SideBySide div.left, div.SideBySide div.right {
 	flex-basis: 50%;
 	display: flex;
+}
+
+div.SideBySide div.left  div, div.SideBySide div.right div {
+
 }
 
 div.SideBySide div.left {
