--- a/src/Screen/Login/style.css
+++ b/src/Screen/Login/style.css
@@ -2,7 +2,7 @@ div.Login {
   display: flex;
   flex-direction: column;
   height: 100%;
-
+  position: relative;
 }
 
 div.Login div.RightContent {
